Get events from database
